fixed CSS for sidebar (navbar) on mobile sizes

--- a/src/assets/stylesheets/globals/sidebar.scss
+++ b/src/assets/stylesheets/globals/sidebar.scss
@@ -1,23 +1,23 @@
 .navbar {
-      background: linear-gradient(135deg, rgba(0,39,135,1) 14%,rgba(37,141,200,1) 100%) !important;
-      a {
-        color: white !important;
+  background: linear-gradient(135deg, rgba(0, 39, 135, 1) 14%, rgba(37, 141, 200, 1) 100%) !important;
+  a {
+    color: white !important;
+  }
+  .dropdown-menu {
+    background-color: rgb(0, 39, 135);
+    a {
+      &:focus {
+        background-color: rgb(0, 39, 135);
       }
-      .dropdown-menu {
-        background-color: rgb(0,39,135);
-        a {
-          &:focus {
-            background-color: rgb(0,39,135);
-          }
-          &:hover {
-            background-color: darken($emoryBlue, 5%)
-          }
-          &:active {
-            background-color: darken($white, 10%);
-            color: $emoryBlue !important;
-          }
-        }
+      &:hover {
+        background-color: darken($emoryBlue, 5%);
       }
+      &:active {
+        background-color: darken($white, 10%);
+        color: $emoryBlue !important;
+      }
+    }
+  }
 }
 body {
   overflow-x: hidden;
@@ -30,40 +30,40 @@ html {
   }
 }
 #hexagon {
-      width: 100px;
-      height: 55px;
-      background: red;
-      position: relative;
-    }
-    #hexagon:before {
-      content: "";
-      position: absolute;
-      top: -25px;
-      left: 0;
-      width: 0;
-      height: 0;
-      border-left: 50px solid transparent;
-      border-right: 50px solid transparent;
-      border-bottom: 25px solid red;
-    }
-    #hexagon:after {
-      content: "";
-      position: absolute;
-      bottom: -25px;
-      left: 0;
-      width: 0;
-      height: 0;
-      border-left: 50px solid transparent;
-      border-right: 50px solid transparent;
-      border-top: 25px solid red;
-    }
+  width: 100px;
+  height: 55px;
+  background: red;
+  position: relative;
+}
+#hexagon:before {
+  content: "";
+  position: absolute;
+  top: -25px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 25px solid red;
+}
+#hexagon:after {
+  content: "";
+  position: absolute;
+  bottom: -25px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-top: 25px solid red;
+}
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
-  -webkit-transition: margin .25s ease-out;
-  -moz-transition: margin .25s ease-out;
-  -o-transition: margin .25s ease-out;
-  transition: margin .25s ease-out;
+  -webkit-transition: margin 0.25s ease-out;
+  -moz-transition: margin 0.25s ease-out;
+  -o-transition: margin 0.25s ease-out;
+  transition: margin 0.25s ease-out;
   position: fixed;
   z-index: 2;
   max-width: $sidebarWidth;
@@ -114,5 +114,19 @@ html {
 
   #wrapper.toggled #sidebar-wrapper {
     margin-left: -15rem;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  html {
+    overflow-x: auto;
+    overflow-y: auto;
+  }
+  .navbar {
+    padding: 2px 0px 2px 10px;
+  }
+  .navbar-toggler {
+    font-size: .75rem;
+    margin-right: 5px;
   }
 }
